api: Add the applications_application_tcb_build_yaml_get
Related-to: TIE-245
